# Welle

./: .gitignore  CMakeLists.txt  README.md  Welle.hpp
include/: Welle.hpp
tests/: AmplitudeTests.cpp  CMakeLists.txt  FFT.cpp  FFT.hpp  FrequencyTests.cpp  PhaseTests.cpp  Tests.cpp  ValidationTests.cpp
visualize/: CMakeLists.txt  PythonWrapper.cpp  Visualize.py
